# bookmark-server

./: .editorconfig  Cargo.toml  build.rs  serve.txt
src/: main.rs
web/: index.html
